# riweather

./: .flake8  .gitignore  .pre-commit-config.yaml  404.html  MANIFEST.in  README.md  index.html  mkdocs.yml  noxfile.py  objects.inv  pyproject.toml  sitemap.xml
.github/: release-drafter.yml
.github/workflows/: constraints.txt  docs.yml  release-drafter.yml  release.yml  test-pypi.yml  tests.yml
about/integrated_surface_dataset/: index.html
about/shorthand_codes/: index.html
about/structure/: index.html
api/parser/: index.html
api/rollup/: index.html
api/station/: index.html
cli/: index.html
data_resampling/: index.html
docs/: cli.md  data_resampling.ipynb  getting_started.ipynb  how_to.ipynb  index.md  install.md  reference.md  resampling.ipynb
docs/about/: integrated_surface_dataset.md  shorthand_codes.md  structure.md
docs/api/: parser.md  rollup.md  station.md
docs/data_sources/: integrated_surface_dataset.md
docs/stylesheets/: extra.css
getting_started/: index.html
how_to/: index.html
install/: index.html
reference/: index.html
resampling/: index.html
search/: search_index.json
src/riweather/: __init__.py  cli.py  connection.py  parser.py  stations.py  utils.py  viz.py
src/riweather/db/: __init__.py  actions.py  models.py
src/riweather/resources/: __init__.py  metadata.db
stylesheets/: extra.css
tests/: __init__.py  conftest.py  test_cli.py  test_connection.py  test_db.py  test_station.py
tests/data/: 720534-00161-2025
