[tool.poetry]
name = "riweather"
version = "0.4.0"
description = "Grab publicly available weather data"
authors = ["John Ensley <jensley@resource-innovations.com>"]
license = "Apache-2.0"
readme = "README.md"
homepage = "https://github.com/ensley-nexant/riweather"
repository = "https://github.com/ensley-nexant/riweather"
documentation = "https://ensley-nexant.github.io/riweather"
keywords = ["weather", "noaa"]
include = ["*.db"]

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.3"
requests = "^2.28.1"
sqlalchemy = "^1.4.45"
pyshp = "^2.3.1"
shapely = "^2.0.0"
pandas = "^1.5.2"
pyproj = "^3.4.1"
matplotlib = {version = "^3.6.2", optional = true}
folium = {version = "^0.14.0", optional = true}

[tool.poetry.extras]
plots = ["folium", "matplotlib"]

[tool.poetry.scripts]
riweather = "riweather.cli:main"


[tool.poetry.group.tests.dependencies]
pytest = "^7.2.0"
coverage = {extras = ["toml"], version = "^7.0.1"}
pytest-cov = "^4.0.0"
pytest-mock = "^3.10.0"


[tool.poetry.group.dev.dependencies]
isort = "^5.11.4"
black = "^22.12.0"
flake8 = "^6.0.0"
flake8-bandit = "^4.1.1"
flake8-black = "^0.3.6"
flake8-bugbear = "^22.12.6"
flake8-isort = "^6.0.0"
safety = "^2.3.5"
flake8-docstrings = "^1.6.0"
mkdocs = "^1.4.2"
mkdocs-material = "^8.5.11"
mknotebooks = "^0.7.1"
mkdocstrings = {extras = ["python"], version = "^0.19.1"}
mkdocs-autorefs = "^0.4.1"
pygments = "^2.13.0"
jupyter = "^1.0.0"
mkdocs-click = "^0.8.0"

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["riweather"]

[tool.coverage.report]
show_missing = true

[tool.isort]
profile = "black"
line_length = 88

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
