#[tool.poetry.dependencies]
#matplotlib = {version = "^3.6.2", optional = true}
#folium = {version = "^0.14.0", optional = true}
#
#[tool.poetry.extras]
#plots = ["folium", "matplotlib"]


[tool.hatch]
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name="riweather"
version = "0.6.0"
description = "Grab publicly available weather data"
authors = [
    { name = "John Ensley", email="jensley@resource-innovations.com" }
]
license = "Apache-2.0"
readme = "README.md"
homepage = "https://github.com/ensley-nexant/riweather"
repository = "https://github.com/ensley-nexant/riweather"
documentation = "https://ensley-nexant.github.io/riweather"
keywords = ["weather", "noaa"]
include = ["*.db"]
requires-python = ">=3.10"
dependencies = [
    "click~=8.1.3",
    "requests~=2.28.1",
    "sqlalchemy~=2.0.20",
    "pyshp~=2.3.1",
    "shapely~=2.0.0",
    "pandas~=2.1.0",
    "pyproj~=3.4.1",
]

[project.optional-dependencies]
plots = [
    "folium~=0.14.0",
    "matplotlib~=3.6.2",
]

[project.scripts]
riweather = "riweather.cli:main"
