[project]
name = "riweather"
dynamic = ["version"]
description = "Grab publicly available weather data"
authors = [
    { name = "John Ensley", email="jensley@resource-innovations.com" }
]
license = "Apache-2.0"
readme = "README.md"
homepage = "https://github.com/ensley-nexant/riweather"
repository = "https://github.com/ensley-nexant/riweather"
documentation = "https://ensley-nexant.github.io/riweather"
keywords = ["weather", "noaa"]
requires-python = ">=3.10"
dependencies = [
    "click>=8.1.3",
    "requests>=2.28.1",
    "sqlalchemy>=2.0.20",
    "pyshp>=2.3.1",
    "shapely>=2.0.0",
    "pandas>=2.2",
    "pydantic>=2.10.6",
    "pyproj>=3.7.0",
]

[project.optional-dependencies]
plots = [
    "folium>=0.14.0",
    "matplotlib>=3.6.2",
]

[project.scripts]
riweather = "riweather.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.coverage.report]
show_missing = true

[tool.hatch.envs.docs]
dependencies = [
    "griffe-pydantic>=1.1.0",
    "mkdocs>=1.6.1",
    "mkdocs-autorefs>=1.3.0",
    "mkdocs-click>=0.8.1",
    "mkdocs-jupyter>=0.25.1",
    "mkdocs-material>=9.5.50",
    "mkdocstrings[python]>=0.27.0",
    "mknotebooks>=0.8.0",
    "ruff",
]

[tool.hatch.envs.docs.scripts]
build = "mkdocs build --clean --strict"
serve = "mkdocs serve --dev-addr localhost:8000 -w src/riweather"
deploy = "mkdocs gh-deploy"

[tool.hatch.envs.hatch-test]
default-args = ["--config-file=pyproject.toml"]

[tool.hatch.version]
path = "src/riweather/__about__.py"

[tool.pytest.ini_options]
addopts = ['--doctest-modules', '--doctest-glob=*.md']
testpaths = ["tests", "src/riweather"]

[tool.ruff.lint]
ignore = [
    "N806",
    "S321",
    "TRY003",
]

[tool.ruff.lint.extend-per-file-ignores]
"__init__.py" = [
    "E402",
    "F401",
    "TID252",
]
"**/tests/**/*" = [
    "ARG001",
    "ARG002",
]
